@@ -10,6 +10,7 @@ use Drupal\search_api\Display\DisplayPluginBase;
  * @SearchApiDisplay(
  *   id = "search_api_test",
  *   label = @Translation("Test processor"),
+ *   index = "search_api_test"
  * )
  */
 class TestDisplay extends DisplayPluginBase {
